Created a Lastenheft for iMage.

--- a/image.lastenheft/Lastenheft.tex
+++ b/image.lastenheft/Lastenheft.tex
@@ -16,130 +16,85 @@ bookmarks=true,%
 %
 % % Glossareinträge
 %
-\newglossaryentry{Dozent}
+\newglossaryentry{Smartphone}
 {
-	name=Dozent,
-	plural=Dozenten,
-	description={Leiter eines oder mehrerer Seminartypen},
+	name=Smartphone,
+	plural=Smartphones,
+	description={Mobiltelefon, welches erweiterte Funktionen wie GPS und die Installation von Apps zur Verfügung stellt.},
 }
 
 \newglossaryentry{Kunde}
 {
 	name=Kunde,
 	plural=Kunden,
-	description={(Zahlende) Teilnehmer einer oder mehrerer Seminarveranstaltung/en}
+	description={(Zahlende) Nutzer der App iMage.}
 }
 
-\newglossaryentry{Seminartyp}
+\newglossaryentry{Applikation}
 {
-	name=Seminartyp,
-	plural=Seminartypen,
-	description={Typ einer Lehrveranstaltung (z.B. \enquote{Schöner Malen -- Anfängerkurs})}
+	name=Applikation,
+	plural=Applikationen,
+	description={Anwendung, welche z.B. auf einem Smartphone installiert werden kann.}
 }
 
-\newglossaryentry{Seminarveranstaltung}
+\newglossaryentry{HDR Bild}
 {
-	name=Seminarveranstaltung,
-	plural=Seminarveranstaltungen,
-	description={Tatsächlich stattfindende Lehrveranstaltung (z.B. \enquote{Schöner Malen -- Anfängerkurs, Sommer 2014})}
+	name=HDR Bild,
+	plural=HDR Bilder,
+	description={HDR steht für High Dynamic Range Bild. Grafik, welche hohe Helligkeitsstufen detailreich wiedergibt.}
 }
 
-\newglossaryentry{Computer}
+\newglossaryentry{soziales Netzwerk}
 {
-	name=Computer,
-	description={Gerät zur Verarbeitung zur Daten, das die Daten einlesen, verarbeiten, speichern und ausgeben kann}
+	name=soziales Netzwerk,
+	plural=soziale Netzwerke,
+	description={Seite im Internet, welche den Informationsaustausch und Kontakt zwischen Menschen fördert. Beispiele hierfür sind Facezine und Instagrim.}
 }
 
-\title{SWT1: Lastenheftvorlage}
-\author{John Doe, 1234567}
+\title{SWT1: Lastenheft iMage}
+\author{Daniel Vollmer, 2219041}
 
 \begin{document}
 
 \maketitle
 
 %
-% % Hinweise - sollen nicht im endgültigen Dokument erscheinen, daher vor der Abgabe löschen!
-%
-\section{Vorwort}
-Die Dokumentation der Pakete ist häufig lesenswert.
-Insbesondere bei den Paketen hyperref und scrguide (KOMA-Script).
-Wer TeXLivei per Kommandozeile benutzt kann einfach texdoc scrguide aufrufen.
-Windows-Benutzer, die noch nie mit Latex gearbeitet haben, können sich alternativ MikTex anschauen; Mac-Benutzer MacTex.
-
-Zum Erzeugen eines PDFs aus den LATEX-Sourcen empfehlen wir einen Wrapper wie latexmk\footnote{\url{https://www.ctan.org/tex-archive/support/latexmk}} oder einen Editor wie TeXStudio\footnote{\url{http://www.texstudio.org/}} zu verwenden.
-Dieser übernimmt beispielsweise das mehrfache Ausführen von pdflatex, wo es notwendig ist.
-
-Legen Sie für dieses Dokument ein neues Verzeichnis in Ihrem Git an, zum Beispiel \texttt{image.lastenheft} und speichern Sie alle benötigten Dateien darin.
-Speichern Sie keine von Latex generierten Dateien (außer dem PDF) im Git.
-Dies geschieht über die mitgelieferte \texttt{.gitignore}.
-Sie können aber auch Ihre persönliche \texttt{.gitignore} bei Bedarf erweitern.
-
-\section{Technisches Schreiben}
-
-Technisches Schreiben ist wichtig für alle Arten von technischen und wissenschaftlichen Dokumenten, also auch im PSE und in der Bachelorarbeit.
-Es bedeutet vor allem eine präzise Ausdrucksweise und widerspricht dabei einigen Regeln, die man im Deutschunterricht gelernt hat.
-Ein paar praktische Tipps (aus den PSE-Dokumenten von Prof. Snelting):
-\begin{itemize}[nosep]
-\item Vermeide Adjektive.
-      Oft (nicht immer) sind sie unnötig oder ein schlechter Ersatz für einen ungenauen Begriff.
-\item Nebensatzkonstruktionen vermeiden; Hauptsätze verwenden!
-\item Definiere Begriffe klar und verwende keine Synonyme.
-      Synonyme lassen offen, ob genau das gleiche gemeint ist oder nur etwas ähnliches.
-      Definiere spezielle Begriffe, z.B. \gls{Computer}, in einem Glossar und verweise im Dokument entsprechend darauf.
-\item Abkürzungen sollten bei der ersten Verwendung (EV) ausgeschrieben werden.
-      Nach der EV reicht dann die Kurzform.
-\item Versuche konkrete Zahlen und Namen anzugeben.
-      Vermeide ungenaue Ausflüchte wie: meistens, viele, oft, möglichst, üblich, jemand, manche.
-\item Viele kurze Sätze sind einfacher zu verstehen als wenige lange Sätze.
-\item Beispiele machen das Endprodukt greifbarer.
-\item Illustrationen minimalistisch halten (z.B. IKEA Bauanleitung).
-      Eine Information, ein Bild.
-      Lieber mehrere ähnliche Bilder als ein komplexes Bild.
-\item Vermeide Wiederholung, stattdessen Referenzen benutzen.
-      Wiederholungen haben oft subtile Unterschiede, was zu Unklarheit und Verwirrung führt.
-      Bei Änderungen wird oft vergessen, dass Wiederholungen auch angepasst werden müssen.
-\item Versionskontrolle ergibt auch für technische Texte Sinn und nicht nur für Code.
-\end{itemize}
-
-%
 % % Hier beginnt die Gliederung des Lastenhefts
 %
 \section{Zielbestimmung}
-Die Firma Teachware soll durch das Produkt in die Lage versetzt werden, die von ihr veranstalteten Seminare rechnerunterstützt zu verwalten.
+iMage ist eine \gls{Applikation} (App) der Firma Pear Corp. Diese soll in der Lage sein \glspl{HDR Bild} auf Grundlage von vom \glspl{Kunde} ausgewählten Bildern zu erstellen. Zur Speicherung muss der Kunde entweder eine Einmalzahlung tätigen oder ein Monatsabonnement abschließen. Der Kunde soll außerdem in der Lage sein erstellte Bilder direkt auf sozialen Medien zu teilen.
 
 \section{Produkteinsatz}
-Das Produkt dient zur Kunden- und Seminarverwaltung der Firma Teachware. Außerdem sollen verschiedene Anfragen beantwortet werden können.
+Das Produkt dient dem Kunden dazu mit einem mobilen Endgerät \glspl{HDR Bild} zu erzeugen, speichern und teilen in sozialen Netzwerken.
 
-Zielgruppe: die Mitarbeiter der Firma Teachware.
+Zielgruppe: Alle \glspl{Kunde} mit einem mobilen Endgerät, welche sich für die Erstellung von \glspl{HDR Bild}n interessieren.
 
-Plattform: PC mit Windows XP oder Nachfolger-Betriebssystem
+Plattform: Smartphone (Android und iOS für optimale Kundenabdeckung. Für optimale Performance der Anwendung soll ein Smartphone der mittleren Preisklasse bereits ausreichen.)
 
 \section{Funktionale Anforderungen}
 \begin{itemize}[nosep]
-\item[FA10] Ersterfassung, Änderung und Löschung von \glspl{Kunde} (Teilnehmer, Interessenten).
-\item[FA20] Benachrichtigung der Kunden (Anmeldebestätigung, Abmeldebestätigung, Änderungsmitteilungen, Rechnung, Werbung).
-\item[FA30] Ersterfassung, Änderung und Löschung von Seminarveranstaltungen und Seminartypen.
-\item[FA40] Ersterfassung, Änderung und Löschung von \glspl{Dozent} sowie Zuordnung zu \glspl{Seminarveranstaltung} und \glspl{Seminartyp}.
-\item[FA50] Ersterfassung, Änderung und Löschung von Seminarbuchungen.
-\item[FA60] Erstellung von Rechnungen.
-\item[FA70] Erstellung verschiedener Listen (Teilnehmerliste, Umsatzliste, Teilnehmerbescheinigungen).
-\item[FA80] Anfragen der folgenden Art sollen möglich sein:
-     Wann findet das nächste Seminar X statt? Welche Mitarbeiter der Firma Y haben das Seminar X besucht?
+\item[FA10] Bereitstellung einer Übersicht über das Nutzerkonto und der zuletzt erstellten \glspl{HDR Bild} auf der Startseite.
+\item[FA20] Anzeigen einer Vorschau beim Klick auf ein bereits erstelltes \glspl{HDR Bild}, sowie die Anzeige eines "Schließen" Buttons zum beenden der Vorschau und eines "Teilen" Buttons zum hochladen in \glspl{soziales Netzwerk}.
+\item[FA30] Ein Button "Neues HDR-Bild" auf der Startseite. Durch diesen soll der \gls{Kunde} zu einer Übersicht seiner auf dem \gls{Smartphone} gespeicherten Bilder gelangen. Nach Auswahl dreier Bilder und einer Bestätigung auf den Button "HDR-Bild" soll die Erzeugung eines neuen \gls{HDR Bild}es auf Grundlage der ausgewählten Bilder eingeleitet werden.
+\item[FA40] Erzeugung eines \gls{HDR Bild}es. Dazu werden die benötigten Daten auf den Pear-Corp-Zentralserver hochgeladen. 
+\item[FA50] Erzeugte Bilder vom Pear-Corp-Zentralserver über den Button "HDR-Bild abholen".
+\item[FA60] Einrichtung eines Monatsabonnements oder einer Einmalzahlung des \glspl{Kunde}, um die erstellten \glspl{HDR Bild} beim Klick auf den "HDR-Bild abholen" Button zu erhalten. Hat der \gls{Kunde} bereits ein Monatsabonnement abgeschlossen, so entfällt diese Einrichtung und es wird sofort der "HDR-Bild jetzt speichern" Button angezeigt, durch welchen das Bild gespeichert wird.
+\item[FA70] Dauerhafte Speicherung aller Bilder zur Analyse der Nutzererfahrng auf dem Pear-Corp-zentralserver.
 \end{itemize}
 
 \section{Produktdaten}
 \begin{itemize}[nosep]
 \item[PD10] Es sind relevante Daten über die Kunden zu speichern.
-\item[PD20] Falls ein Kunde zu einer Firma gehört, dann sind relevante Daten über die Firma zu speichern.
-\item[PD30] Es sind relevante Daten über Seminarveranstaltungen, Seminartypen und Dozenten zu speichern.
-\item[PD40] Bucht ein Kunde eine Seminarveranstaltung, dann sind entsprechende Buchungsdaten zu speichern.
+\item[PD20] Die Zahlungsinformationen und Zahlungsart des Kunden sind zu speichern.
+\item[PD30] Es sind alle Bilder (Eingabe- und Ergebnisbilder) des Kunden zu speichern.
 \end{itemize}
 
 \section{Nichtfunktionale Anforderungen}
 \begin{itemize}[nosep]
-\item[NF10] Die Funktion /FA80/ darf nicht länger als 15 Sekunden Interaktionszeit benötigen, alle anderen Reaktionszeiten müssen unter 2 Sekunden liegen.
-\item[NF20] Es müssen maximal 50.000 Teilnehmer und maximal 10.000 Seminare verwaltet werden können.
-\end{itemize}
+\item[NF10] Die Übersicht aller Bilder auf dem \gls{Smartphone} des \glspl{Kunde} (Funktion /FA30/) soll in Echtzeit bis zu 100 Bilder aneigen können.
+\item[NF20] Mindestens 1000 \glspl{Kunde} müssen gleichzeitig mit dem Pear-Corp-Zentralserver kommunizieren können.
+\item[NF30] Dier Erzeugung eines \gls{HDR Bild}es darf nicht länger als sieben Sekunden dauern.
+\end{itemize} 
 
 \section{Systemmodelle}
 
@@ -148,12 +103,12 @@ Plattform: PC mit Windows XP oder Nachfolger-Betriebssystem
 \subsection{Anwendungsfälle}
 \subsubsection{Seminarorganisation}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{szenario_seminarorganisation.pdf}
+\includegraphics[width=0.8\textwidth]{Szenario1.jpg}
 \end{center}
 
-Akteure: Kundensachbearbeiter, Seminarsachbearbeiter.
+Akteure: Kunde, Pear-Corp-Zentralserver.
 
-Anwendungsfälle: Kundenverwaltung, Rechnungsstellung, Anfragebearbeitung, Dozentenverwaltung, Listenverwaltung, Seminarverwaltung.
+Anwendungsfälle: Bilder Auswahl, Bilder hochladen, \gls{HDR Bild} speichern oder teilen, Zahlungsart wählen, Anfragebearbeitung, Kundenbilder und \gls{HDR Bild} speichern, \gls{HDR Bild} bereitstellen, \gls{HDR Bild} hochladen, \gls{HDR Bild} erzeugen, Kundenbilder herunterladen.
 
 Textuelle Beschreibung: (folgt)
 
